# cognee-community

./: .gitignore  ProblemStatement.md  README.md  ruff.toml
.github/: README_CI_CD.md
.github/actions/cognee_setup/: action.yml
.github/actions/community_setup/: action.yml
.github/workflows/: README.md  community_test_suite.yml  graph_db_community_tests.yml  ruff.yml  test_duckdb.yml  test_falkordb.yml  test_memgraph.yml  test_milvus.yml  test_opensearch.yml  test_qdrant.yml  test_redis.yml  test_weaviate.yml  vector_db_community_tests.yml
experimental/assistant_dlt_docs/: build_dlt_assistant_with_cognee.py  clean_docs_dlt.py  extract_specific_pages.py  scrape_docs.py  scrape_specific_urls.py
experimental/faq_assistant_qdrant_docs/: clean_docs_qdrant.py  faq_assistant_with_cognee.py  query.py  scrape_docs.py
experimental/n8n-nodes-cognee/: README.md  package.json
experimental/neo4j_demo/: .env.template  docs_intelligence_cognee.py  neo4j_docs_aura.md  neo4j_docs_ontology.owl  neo4j_docs_operations_manual.md  neo4j_docs_operations_manual_docker.md  requirements.txt  search.py
experimental/redis-multi-actor-mem-coding/: README.md  pyproject.toml  run-cognee.sh
experimental/redis-multi-actor-mem-coding/src/: ontology.py  server.py
experimental/tower_demo/: .env.template  .gitignore  README.md  Towerfile  pyproject.toml  requirements.txt  task.py
