[project]
name = "tower_demo"
version = "0.1.0"
description = "Extract Hacker News data and build knowledge graphs with Cognee"
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "cognee>=0.1.44",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "tower>=0.3.18",
    "pyiceberg",
    "polars>=1.29.0",
] 